welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:3: error: not found: value sef
	sef faireV(c:Color.Yellow) { 
        ^