welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
	sef faireV(c:Color.Yellow) { 
		avance();
		baisseBrosse();
		leveBrosse();
		avance()
	}
}
